# odds

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: args.rs  config.rs  discovery.rs  history.rs  lib.rs  main.rs  model.rs  navigator.rs  paths.rs  picker.rs  ranking.rs  seeder.rs  session.rs  utils.rs
src/discovery/: bfs.rs  cache.rs  matcher.rs  matcher_tests.rs  mod.rs
src/navigation/: mod.rs  navigator.rs  navigator_tests.rs  picker.rs
src/persistence/: history.rs  markov.rs  markov_tests.rs  mod.rs  persistable.rs  session.rs  util.rs
src/ranking/: mod.rs  ranker.rs  ranker_tests.rs
src/tests/: mod.rs  navigator_tests.rs  ranking_tests.rs
tests/: integration_tests.rs
